@@ -67,6 +67,7 @@ $strAPrimaryKey = 'V tabulce %s byl vytvořen primární klíč';
 $strArabic = 'Arabština';
 $strArmenian = 'Arménština';
 $strAscending = 'Vzestupně';
+$strAsDefined = 'Dle zadání:';
 $strAtBeginningOfTable = 'Na začátku tabulky';
 $strAtEndOfTable = 'Na konci tabulky';
 $strAttr = 'Vlastnosti';
@@ -120,26 +121,6 @@ $strCardinality = 'Mohutnost';
 $strCaseInsensitive = 'nerozlišovat velká a malá písmena';
 $strCaseSensitive = 'rozlišovat velká a malá písmena';
 $strCentralEuropean = 'Střední Evropa';
-$strChangeCopyModeCopy = '... zachovat původního uživatele.';
-$strChangeCopyModeDeleteAndReload = ' ... smazat uživatele a poté znovu načíst oprávnění.';
-$strChangeCopyModeJustDelete = ' ... smazat původního uživatele ze všech tabulek.';
-$strChangeCopyModeRevoke = ' ... odebrat všechna oprávnění původnímu uživateli a poté ho smazat.';
-$strChangeCopyMode = 'Vytvořit nového uživatele se stejnými oprávněními a ...';
-$strChangeCopyUser = 'Změnit informace o uživateli / Kopírovat uživatele';
-$strChangeDisplay = 'Zvolte které sloupce zobrazit';
-$strChangePassword = 'Změnit heslo';
-$strChange = 'Změnit';
-$strCharsetOfFile = 'Znaková sada souboru:';
-$strCharsetsAndCollations = 'Znakové sady a porovnávání';
-$strCharsets = 'Znakové sady';
-$strCharset = 'Znaková sada';
-$strCheckAll = 'Zaškrtnout vše';
-$strCheckOverhead = 'Zaškrtnout neoptimální';
-$strCheckPrivsLong = 'Zkontrolovat oprávnění pro databázi „%s“.';
-$strCheckPrivs = 'Zkontrolovat oprávnění';
-$strCheckTable = 'Zkontrolovat tabulku';
-$strCheck = 'Zkontrolovat';
-$strChoosePage = 'Zvolte stránku, kterou chcete změnit';
 $strColComFeat = 'Zobrazuji komentáře sloupců';
 $strCollation = 'Porovnávání';
 $strColumnNames = 'Názvy sloupců';
@@ -184,9 +165,30 @@ $strCreationDates = 'Datum vytvoření, poslední změny a kontroly';
 $strCriteria = 'Podmínka';
 $strCroatian = 'Chorvatština';
 $strCSV = 'CSV';
+$strCustomColor = 'Vlastní barva';
 $strCyrillic = 'Cyrilika';
 $strCzech = 'Čeština';
 $strCzechSlovak = 'Čeština/Slovenština';
+$strChangeCopyModeCopy = '... zachovat původního uživatele.';
+$strChangeCopyModeDeleteAndReload = ' ... smazat uživatele a poté znovu načíst oprávnění.';
+$strChangeCopyModeJustDelete = ' ... smazat původního uživatele ze všech tabulek.';
+$strChangeCopyModeRevoke = ' ... odebrat všechna oprávnění původnímu uživateli a poté ho smazat.';
+$strChangeCopyMode = 'Vytvořit nového uživatele se stejnými oprávněními a ...';
+$strChangeCopyUser = 'Změnit informace o uživateli / Kopírovat uživatele';
+$strChangeDisplay = 'Zvolte které sloupce zobrazit';
+$strChangePassword = 'Změnit heslo';
+$strChange = 'Změnit';
+$strCharsetOfFile = 'Znaková sada souboru:';
+$strCharsetsAndCollations = 'Znakové sady a porovnávání';
+$strCharsets = 'Znakové sady';
+$strCharset = 'Znaková sada';
+$strCheckAll = 'Zaškrtnout vše';
+$strCheckOverhead = 'Zaškrtnout neoptimální';
+$strCheckPrivsLong = 'Zkontrolovat oprávnění pro databázi „%s“.';
+$strCheckPrivs = 'Zkontrolovat oprávnění';
+$strCheckTable = 'Zkontrolovat tabulku';
+$strCheck = 'Zkontrolovat';
+$strChoosePage = 'Zvolte stránku, kterou chcete změnit';
 
 $strDanish = 'Dánština';
 $strDatabase = 'Databáze';
@@ -419,7 +421,6 @@ $strKorean = 'Korejština';
 $strLandscape = 'Na šířku';
 $strLanguage = 'Jazyk';
 $strLanguageUnknown = 'Neznámý jazyk: %1$s.';
-$strLatchedPages = 'Zamčených stránek';
 $strLatexCaption = 'Titulek tabulky';
 $strLatexContent = 'Obsah tabulky __TABLE__';
 $strLatexContinuedCaption = 'Titulek pokračování tabulky';
@@ -428,6 +429,7 @@ $strLatexIncludeCaption = 'Použít titulek tabulky';
 $strLatexLabel = 'Návěstí';
 $strLaTeX = 'LaTeX';
 $strLatexStructure = 'Struktura tabulky __TABLE__';
+$strLatchedPages = 'Zamčených stránek';
 $strLatvian = 'Lotyština';
 $strLDI = 'CSV pomocí LOAD DATA';
 $strLDILocal = 'Použít klíčové slovo LOCAL';
@@ -483,9 +485,9 @@ $strMyISAMRepairThreadsDesc = 'Pokud je tato hodnota větší než 1, indexy v 
 $strMyISAMRepairThreads = 'Threadů pro opravování';
 $strMyISAMSortBufferSizeDesc = 'Paměť, která je alokována při řazení MyISAM indexů během jejich vytváření nebo opravování.';
 $strMyISAMSortBufferSize = 'Velikost paměti pro řazení';
-$strMySQLCharset = 'Znaková sada v MySQL';
 $strMysqlClientVersion = 'Verze MySQL klienta';
 $strMySQLConnectionCollation = 'Porovnávání pro toto připojení k MySQL';
+$strMySQLCharset = 'Znaková sada v MySQL';
 $strMysqlLibDiffersServerVersion = 'Používaný MySQL modul v PHP je kompilován pro MySQL %s a server používá verzi %s. Používání různých verzí může způsobit problémy.';
 $strMySQLSaid = 'MySQL hlásí: ';
 $strMySQLShowProcess = 'Zobrazit procesy';
@@ -552,11 +554,15 @@ $strPartitionDefinition = 'Definice PARTITION';
 $strPartitioned = 'používá oddíly';
 $strPartitionMaintenance = 'Údržba oddílů';
 $strPartition = 'Oddíl %s';
-$strPasswordChanged = 'Heslo pro %s bylo úspěšně změněno.';
 $strPasswordEmpty = 'Heslo je prázdné!';
 $strPasswordHashing = 'Hašovací funkce pro heslo';
 $strPassword = 'Heslo';
+$strPasswordChanged = 'Heslo pro %s bylo úspěšně změněno.';
 $strPasswordNotSame = 'Hesla nejsou stejná!';
+$strPBXTIndexCacheSize = 'Velikost vyrovnávací paměti indexu';
+$strPBXTLogCacheSize = 'Velikost vyrovnávací paměti logů';
+$strPBXTLogFileThreshold = 'Prahová hodnota logového souboru';
+$strPBXTRecordCacheSize = 'Velikost vyrovnávací paměti záznamu';
 $strPdfDbSchema = 'Schéma databáze „%s“ - Strana %s';
 $strPdfInvalidTblName = 'Tabulka „%s“ neexistuje!';
 $strPdfNoTables = 'žádné tabulky';
@@ -568,6 +574,7 @@ $strPerMinute = 'za minutu';
 $strPerSecond = 'za sekundu';
 $strPersian = 'Perština';
 $strPhoneBook = 'adresář';
+$strPHPExtension = 'Rozšíření PHP';
 $strPHPVersion = 'Verze PHP';
 $strPhp = 'Vytvořit PHP kód';
 $strPleaseSelectPrimaryOrUniqueKey = 'Zvolte, prosím, primární nebo unikátní klíč';
@@ -597,8 +604,8 @@ $strPrivDescDelete = 'Umožňuje mazat data.';
 $strPrivDescDropDb = 'Umožňuje odstranit databáze a tabulky.';
 $strPrivDescDropTbl = 'Umožňuje odstranit tabulky.';
 $strPrivDescEvent = 'Umožňuje plánovat úlohy pomocí plánovače';
-$strPrivDescExecute5 = 'Umožňuje spouštět uložené procedury.';
 $strPrivDescExecute = 'Umožňuje spouštět uložené procedury. V této verzi MySQL se nepoužívá.';
+$strPrivDescExecute5 = 'Umožňuje spouštět uložené procedury.';
 $strPrivDescFile = 'Umožňuje importovat a exportovat data z/do souborů na serveru.';
 $strPrivDescGrant = 'Umožňuje přidávat uživatele a oprávnění bez znovunačítání tabulek s oprávněními.';
 $strPrivDescIndex = 'Umožňuje vytvářet a rušit indexy.';
@@ -650,6 +657,8 @@ $strRecommended = 'doporučené';
 $strRecords = 'Záznamů';
 $strReferentialIntegrity = 'Zkontrolovat integritu odkazů:';
 $strRefresh = 'Obnovit';
+$strRelationalDisplayField = 'Položka k zobrazení v relacích';
+$strRelationalKey = 'Relační klíč';
 $strRelationalSchema = 'Relační schéma';
 $strRelationDeleted = 'Relace smazána';
 $strRelationNotWorking = 'Některé z rozšířených funkcí phpMyAdmina nelze používat. %sZde%s zjistíte proč.';
@@ -841,8 +850,8 @@ $strShowStatusReset = 'Vynulovat statistiky';
 $strShowStatusRpl_statusDescr = 'Stav failsafe replikace.';
 $strShowStatusSelect_full_joinDescr = 'Počet spojení, které nevyužívaly indexy. Pokud tato hodnota není 0, měli byste zkontrolovat indexy tabulek.';
 $strShowStatusSelect_full_range_joinDescr = 'Počet spojení, které používaly intervalové vyhledávání na referenční tabulce.';
-$strShowStatusSelect_range_checkDescr = 'Počet spojení bez klíčů, které kontrolovaly použití klíčů po každém řádku. Pokud tato hodnota není 0, měli byste zkontrolovat indexy tabulek.';
 $strShowStatusSelect_rangeDescr = 'Počet spojení, které používaly intervalové vyhledávání na první tabulce. Tato hodnota obvykle není kritická i když je vysoká.';
+$strShowStatusSelect_range_checkDescr = 'Počet spojení bez klíčů, které kontrolovaly použití klíčů po každém řádku. Pokud tato hodnota není 0, měli byste zkontrolovat indexy tabulek.';
 $strShowStatusSelect_scanDescr = 'Počet spojení, které prováděly kompletní procházení první tabulky.';
 $strShowStatusSlave_open_temp_tablesDescr = 'Počet dočasných tabulek v současné době otevřených podřízeným serverem.';
 $strShowStatusSlave_retried_transactionsDescr = 'Celkový počet, kolikrát musel podřízený server opakovat transakce.';
@@ -889,9 +898,9 @@ $strSQPBugInvalidIdentifer = 'Chybný identifikátor';
 $strSQPBugUnclosedQuote = 'Neuzavřené uvozovky';
 $strSQPBugUnknownPunctuation = 'Neznámé interpunkční znaménko';
 $strStandInStructureForView = 'Zástupná struktura pro pohled';
-$strStatCheckTime = 'Poslední kontrola';
 $strStatCreateTime = 'Vytvoření';
 $strStatement = 'Údaj';
+$strStatCheckTime = 'Poslední kontrola';
 $strStatisticsOverrun = 'Na hodně zatíženém serveru mohou čítače přetéct, takže statistiky MySQL serveru mohou být nepřesné.';
 $strStatUpdateTime = 'Poslední změna';
 $strStatus = 'Stav';
@@ -910,6 +919,10 @@ $strSuccess = 'Váš SQL-dotaz byl úspěšně vykonán';
 $strSuhosin = 'Server používá Suhosin. Prosím podívejte se do %sdokumentace%s pro popis problémů, které tím mohou být způsobeny.';
 $strSum = 'Celkem';
 $strSwedish = 'Švédština';
+$strSwekeyAuthenticating = 'Authentizuji...';
+$strSwekeyAuthFailed = 'Hardwarová autentizace selhala';
+$strSwekeyNoKeyId = 'Soubor %s neobsahuje ID klíče';
+$strSwekeyNoKey = 'Nebyl připojen autentizační klíč';
 $strSwitchToDatabase = 'Přepnout na zkopírovanou databázi';
 $strSwitchToTable = 'Přepnout na zkopírovanou tabulku';
 
@@ -1027,8 +1040,10 @@ $strView = 'Pohled';
 
 $strWebServerUploadDirectoryError = 'Adresář určený pro upload souborů nemohl být otevřen';
 $strWebServerUploadDirectory = 'soubor z adresáře pro upload';
+$strWebServer = 'Webserver';
 $strWelcome = 'Vítejte v %s';
 $strWestEuropean = 'Západní Evropa';
+$strWiki = 'Wiki';
 $strWildcard = 'maska';
 $strWindowNotFound = 'Cílové okno prohlížeče nemohlo být aktualizováno. Možná jste zavřel rodičovské okno, nebo prohlížeč blokuje operace mezi okny z důvodu bezpečnostních nastavení.';
 $strWithChecked = 'Zaškrtnuté:';
@@ -1042,41 +1057,8 @@ $strYes = 'Ano';
 $strZeroRemovesTheLimit = 'Poznámka: Nastavení těchto parametrů na 0 (nulu) odstraní omezení.';
 $strZip = '„zazipováno“';
 
-$strRelationalKey = 'Relational key';  //to translate
-$strRelationalDisplayField = 'Relational display field';  //to translate
-$strSwekeyNoKey = 'No valid authentication key plugged';  //to translate
-$strSwekeyNoKeyId = 'File %s does not contain any key id';  //to translate
-$strSwekeyAuthFailed = 'Hardware authentication failed';  //to translate
-$strSwekeyAuthenticating = 'Authenticating...';  //to translate
-$strPBXTIndexCacheSize = 'Index cache size';  //to translate
-$strPBXTRecordCacheSize = 'Record cache size';  //to translate
-$strPBXTLogCacheSize = 'Log cache size';  //to translate
-$strPBXTLogFileThreshold = 'Log file threshold';  //to translate
-$strPBXTTransactionBufferSize = 'Transaction buffer size';  //to translate
-$strPBXTCheckpointFrequency = 'Checkpoint frequency';  //to translate
-$strPBXTDataLogThreshold = 'Data log threshold';  //to translate
-$strPBXTGarbageThreshold = 'Garbage threshold';  //to translate
-$strPBXTLogBufferSize = 'Log buffer size';  //to translate
-$strPBXTDataFileGrowSize = 'Data file grow size';  //to translate
-$strPBXTRowFileGrowSize = 'Row file grow size';  //to translate
-$strPBXTRowFileGrowSizeDesc = 'The grow size of the row pointer (.xtr) files.';  //to translate
-$strPBXTDataFileGrowSizeDesc = 'The grow size of the handle data (.xtd) files.';  //to translate
-$strPBXTLogBufferSizeDesc = 'The size of the buffer used when writing a data log. The default is 256MB. The engine allocates one buffer pre thread, but only if the thread is required to write a data log.';  //to translate
-$strPBXTGarbageThresholdDesc = 'The percentage of garbage in a data log file before it is compacted. This is a value between 1 and 99. The default is 50.';  //to translate
-$strPBXTDataLogThresholdDesc = 'The maximum size of a data log file. The default value is 64MB. PBXT can create a maximum of 32000 data logs, which are used by all tables. So the value of this variable can be increased to increase the total amount of data that can be stored in the database.';  //to translate
-$strPBXTCheckpointFrequencyDesc = 'The amount of data written to the transaction log before a checkpoint is performed. The default value is 24MB.';  //to translate
-$strPBXTTransactionBufferSizeDesc = 'The size of the global transaction log buffer (the engine allocates 2 buffers of this size). The default is 1MB.';  //to translate
-$strPBXTLogFileThresholdDesc = 'The size of a transaction log before rollover, and a new log is created. The default value is 16MB.';  //to translate
-$strPBXTLogCacheSizeDesc = 'The amount of memory allocated to the transaction log cache used to cache on transaction log data. The default is 16MB.';  //to translate
-$strPBXTRecordCacheSizeDesc = 'This is the amount of memory allocated to the record cache used to cache table data. The default value is 32MB. This memory is used to cache changes to the handle data (.xtd) and row pointer (.xtr) files.';  //to translate
-$strPBXTIndexCacheSizeDesc = 'This is the amount of memory allocated to the index cache. Default value is 32MB. The memory allocated here is used only for caching index pages.';  //to translate
-$strPBXTLogFileCount = 'Log file count';  //to translate
-$strPBXTLogFileCountDesc = 'This is the number of transaction log files (pbxt/system/xlog*.xt) the system will maintain. If the number of logs exceeds this value then old logs will be deleted, otherwise they are renamed and given the next highest number.';  //to translate
-$strAsDefined = 'As defined:';  //to translate
-$strWiki = 'Wiki';  //to translate
-$strWebServer = 'Web server';  //to translate
-$strPHPExtension = 'PHP extension';  //to translate
-$strCustomColor = 'Custom color';  //to translate
+// To translate:
+
 $strBLOBRepository = 'BLOB Repository';  //to translate
 $strBLOBRepositoryDamaged = 'Damaged';  //to translate
 $strBLOBRepositoryDisableAreYouSure = 'Are you sure you want to disable all BLOB references fot database %s?';  //to translate
@@ -1089,8 +1071,32 @@ $strBLOBRepositoryRemove = 'Remove BLOB Repository Reference';  //to translate
 $strBLOBRepositoryRepair = 'Repair';  //to translate
 $strBLOBRepositoryStatus = 'Status';  //to translate
 $strBLOBRepositoryUpload = 'Upload to BLOB repository';  //to translate
-$strViewImage = 'View image';  //to translate
-$strPlayAudio = 'Play audio';  //to translate
-$strViewVideo = 'View video';  //to translate
+
 $strDownloadFile = 'Download file';  //to translate
+
+$strPBXTDataFileGrowSize = 'Data file grow size';  //to translate
+$strPBXTDataFileGrowSizeDesc = 'The grow size of the handle data (.xtd) files.';  //to translate
+$strPBXTDataLogThreshold = 'Data log threshold';  //to translate
+$strPBXTDataLogThresholdDesc = 'The maximum size of a data log file. The default value is 64MB. PBXT can create a maximum of 32000 data logs, which are used by all tables. So the value of this variable can be increased to increase the total amount of data that can be stored in the database.';  //to translate
+$strPBXTGarbageThresholdDesc = 'The percentage of garbage in a data log file before it is compacted. This is a value between 1 and 99. The default is 50.';  //to translate
+$strPBXTGarbageThreshold = 'Garbage threshold';  //to translate
+$strPBXTCheckpointFrequencyDesc = 'The amount of data written to the transaction log before a checkpoint is performed. The default value is 24MB.';  //to translate
+$strPBXTCheckpointFrequency = 'Checkpoint frequency';  //to translate
+$strPBXTIndexCacheSizeDesc = 'This is the amount of memory allocated to the index cache. Default value is 32MB. The memory allocated here is used only for caching index pages.';  //to translate
+$strPBXTLogBufferSizeDesc = 'The size of the buffer used when writing a data log. The default is 256MB. The engine allocates one buffer pre thread, but only if the thread is required to write a data log.';  //to translate
+$strPBXTLogBufferSize = 'Log buffer size';  //to translate
+$strPBXTLogCacheSizeDesc = 'The amount of memory allocated to the transaction log cache used to cache on transaction log data. The default is 16MB.';  //to translate
+$strPBXTLogFileCountDesc = 'This is the number of transaction log files (pbxt/system/xlog*.xt) the system will maintain. If the number of logs exceeds this value then old logs will be deleted, otherwise they are renamed and given the next highest number.';  //to translate
+$strPBXTLogFileCount = 'Log file count';  //to translate
+$strPBXTLogFileThresholdDesc = 'The size of a transaction log before rollover, and a new log is created. The default value is 16MB.';  //to translate
+$strPBXTRecordCacheSizeDesc = 'This is the amount of memory allocated to the record cache used to cache table data. The default value is 32MB. This memory is used to cache changes to the handle data (.xtd) and row pointer (.xtr) files.';  //to translate
+$strPBXTRowFileGrowSizeDesc = 'The grow size of the row pointer (.xtr) files.';  //to translate
+$strPBXTRowFileGrowSize = 'Row file grow size';  //to translate
+$strPBXTTransactionBufferSizeDesc = 'The size of the global transaction log buffer (the engine allocates 2 buffers of this size). The default is 1MB.';  //to translate
+$strPBXTTransactionBufferSize = 'Transaction buffer size';  //to translate
+$strPlayAudio = 'Play audio';  //to translate
+
+$strViewImage = 'View image';  //to translate
+$strViewVideo = 'View video';  //to translate
+
 ?>
